Fixed BG
Not showing in pages

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html::before {
     right: 0px;
     bottom: 0px;
     left: 0px;
-    background-color: rgba(0, 0, 0, 0.641);
+    background-color: rgba(0, 0, 0, 0.358);
     position: fixed;
     z-index: -1;
 }
